# bevy_retrograde

./: .gitignore  Cargo.toml  LICENSE.md  README.j2  README.md  README.tpl  build.rs  deny.toml  justfile  perf.data
.github/: FUNDING.yml  bors.toml
.github/workflows/: readme.yaml  rust.yaml
assets/: README.md  music.mmpz
assets/maps/: map.ldtk  physicsDemoMap.ldtk
crates/bevy_retro_audio/: Cargo.toml  README.md  README.tpl  justfile
crates/bevy_retro_audio/src/: assets.rs  components.rs  lib.rs  systems.rs
crates/bevy_retro_core/: Cargo.toml
crates/bevy_retro_core/js/: renderer_utils.js
crates/bevy_retro_core/src/: assets.rs  bevy_extensions.rs  bundles.rs  collisions.rs  components.rs  graphics.rs  lib.rs  renderer.rs  shaders.rs
crates/bevy_retro_core/src/assets/: image.rs
crates/bevy_retro_core/src/components/: position.rs
crates/bevy_retro_core/src/graphics/: starc.rs
crates/bevy_retro_core/src/graphics/hooks/: sprite_hook.rs
crates/bevy_retro_core/src/graphics/hooks/sprite_hook/: sprite_quad.vert
crates/bevy_retro_core/src/renderer/: backend.rs  js.rs  luminance_renderer.rs  luminance_web_sys.rs  starc.rs
crates/bevy_retro_core/src/renderer/backend/: sprite_hook.rs
crates/bevy_retro_ldtk/: Cargo.toml  README.md  justfile
crates/bevy_retro_ldtk/src/: asset.rs  components.rs  lib.rs  system.rs
crates/bevy_retro_macros/: Cargo.toml
crates/bevy_retro_macros/src/: lib.rs
crates/bevy_retro_text/: Cargo.toml
crates/bevy_retro_text/src/: assets.rs  bdf.rs  components.rs  lib.rs  systems.rs
crates/bevy_retro_ui/: Cargo.toml
crates/bevy_retro_ui/src/: interaction.rs  lib.rs  render_hook.rs  resources.rs
crates/bevy_retro_ui/src/render_hook/: ui.vert
crates/bevy_retro_worker/: Cargo.toml  build.rs
crates/bevy_retro_worker/src/: lib.rs  native.rs  wasm.rs
crates/bevy_retrograde_audio/: Cargo.toml
crates/bevy_retrograde_audio/src/: assets.rs  components.rs  lib.rs  systems.rs
crates/bevy_retrograde_core/: Cargo.toml  build.rs
crates/bevy_retrograde_core/src/: bevy_extensions.rs  bundles.rs  collisions.rs  components.rs  graphics.rs  hierarchy.rs  lib.rs  renderer.rs
crates/bevy_retrograde_core/src/assets/: image.rs
crates/bevy_retrograde_core/src/components/: position.rs
crates/bevy_retrograde_core/src/graphics/: hooks.rs
crates/bevy_retrograde_core/src/graphics/hooks/: sprite_hook.rs
crates/bevy_retrograde_core/src/graphics/hooks/sprite_hook/: sprite_quad.frag  sprite_quad.vert
crates/bevy_retrograde_core/src/renderer/: backend.rs
crates/bevy_retrograde_epaint/: Cargo.toml
crates/bevy_retrograde_epaint/src/: lib.rs  render_hook.rs
crates/bevy_retrograde_epaint/src/render_hook/: shape.frag  shape.vert
crates/bevy_retrograde_ldtk/: Cargo.toml  LICENSE.md  README.md  README.tpl
crates/bevy_retrograde_ldtk/src/: asset.rs  components.rs  lib.rs  system.rs  systems.rs
crates/bevy_retrograde_macros/: Cargo.toml
crates/bevy_retrograde_macros/src/: lib.rs
crates/bevy_retrograde_physics/: Cargo.toml
crates/bevy_retrograde_physics/src/: lib.rs  render_hook.rs
crates/bevy_retrograde_text/: Cargo.toml
crates/bevy_retrograde_text/src/: assets.rs  components.rs  lib.rs  systems.rs
crates/bevy_retrograde_ui/: Cargo.toml
crates/bevy_retrograde_ui/src/: bdf.rs  bordered_frame.rs  fonts.rs  interaction.rs  lib.rs  render_hook.rs  resources.rs  retro_button.rs  retro_label.rs
crates/bevy_retrograde_ui/src/render_hook/: ui.frag  ui.vert
examples/: README.md  audio.rs  camera.rs  collisions.rs  collisions_spritesheet.rs  custom_rendering.rs  demo.rs  epaint.rs  hello_world.rs  ldtk_map.rs  physics.rs  physics_character.rs  physics_map.rs  post_processing.rs  postprocessing.rs  radishmark.rs  spritesheet.rs  text.rs  ui.rs
plugins/bevy_retro_ldtk/: Cargo.toml  README.md  README.tpl  justfile
plugins/bevy_retro_ldtk/assets/: README.md  map1.ldtk
plugins/bevy_retro_ldtk/examples/: display_map.rs
plugins/bevy_retro_ldtk/src/: asset.rs  components.rs  system.rs
plugins/bevy_retro_ldtk/wasm_resources/: index.tpl.html
src/: assets.rs  bundles.rs  collisions.rs  components.rs  core.rs  lib.rs  position_propagation.rs  renderer.rs  shaders.rs
src/assets/: image.rs  spritesheet.rs
src/components/: position.rs
src/renderer/: luminance_glutin.rs  luminance_renderer.rs  luminance_web_sys.rs  starc.rs
src/renderer/shaders/: screen.frag  screen.vert  sprite_quad.frag  sprite_quad.vert  viewport.frag  viewport.vert
src/shaders/: crt_shader.glsl  viewport.frag  viewport.vert
wasm_resources/: index.tpl.html  worker.js
