[package]
name = "bevy_retrograde"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"
resolver = "2"

license-file = "LICENSE.md"
readme = "README.md"
description = "Pixel-Perfect, 2D Renderer and plugins for Bevy that Seamlessly Targets Desktop and Web"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

exclude = [
    "examples/screenshots/"
]

[workspace]
members = ["crates/*"]
exclude = [
    "crates/bevy_retrograde_physics",
    "crates/bevy_retrograde_epaint",
    "crates/bevy_retrograde_ldtk",
    "crates/bevy_retrograde_text",
    "crates/bevy_retrograde_ui",
    "crates/bevy_retrograde_audio",
]

[features]
default = [
    "audio",
    # "text",
    # "ui",
    "physics",
    "bevy/png",
    "bevy/x11",
]
audio = ["bevy_retrograde_audio"]
# text = ["bevy_retrograde_text"]
# ui = ["bevy_retrograde_ui"]
# epaint = ["bevy_retrograde_epaint"]
physics = ["bevy_retrograde_physics"]

# ldtk = ["bevy_retrograde_ldtk"]

[dependencies.bevy]
git = "https://github.com/katharostech/bevy"
branch = "bevy_retrograde_0.3"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render2",
    "bevy_sprite2",
    "bevy_winit",
]

[dependencies]
bevy_retrograde_macros = { version = "0.2", path = "crates/bevy_retrograde_macros" }
bevy_retrograde_audio = { version = "0.2", path = "crates/bevy_retrograde_audio", optional = true }
# bevy_retrograde_ldtk = { version = "0.2", path = "crates/bevy_retrograde_ldtk", optional = true }
# bevy_retrograde_text = { version = "0.2", path = "crates/bevy_retrograde_text", optional = true }
# bevy_retrograde_ui = { version = "0.2", path = "crates/bevy_retrograde_ui", optional = true }
bevy_retrograde_physics = { version = "0.2", path = "crates/bevy_retrograde_physics", optional = true }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.3"

[profile.dev]
opt-level = 1
debug = 0

# Add some examples explicitly so we can say they requires the extra `ldtk`
# or `epaint` features.
[[example]]
name = "ldtk_map"
path = "examples/ldtk_map.rs"
# required-features = ["ldtk"]

[[example]]
name = "physics_map"
path = "examples/physics_map.rs"
# required-features = ["ldtk"]

[[example]]
name = "epaint"
path = "examples/epaint.rs"
# required-features = ["epaint"]
