[package]
name = "bevy_retrograde"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"
resolver = "2"

license-file = "LICENSE.md"
readme = "README.md"
description = "Pixel-Perfect, 2D Renderer and plugins for Bevy that Seamlessly Targets Desktop and Web"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

exclude = [
    "examples/screenshots/"
]

[workspace]
members = ["crates/*"]

[features]
default = [
    "audio",
    "ldtk",
    # "text",
    # "ui",
    "physics",
    "bevy/png",
    "bevy/x11",
    "bevy/filesystem_watcher"
]
audio = ["bevy_kira_audio"]
# text = ["bevy_retrograde_text"]
# ui = ["bevy_retrograde_ui"]
physics = ["bevy_retrograde_physics"]
ldtk = ["bevy_ecs_ldtk"]
physics_debug = ["bevy_retrograde_physics/debug"]

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_winit",
]

[dependencies]
bevy_retrograde_macros = { version = "0.2", path = "crates/bevy_retrograde_macros" }
bevy_kira_audio = { version = "0.10.0", optional = true }
bevy_ecs_ldtk = { version = "0.3.0", optional = true }
bevy_retrograde_text = { version = "0.2", path = "crates/bevy_retrograde_text", optional = true }
# bevy_retrograde_ui = { version = "0.2", path = "crates/bevy_retrograde_ui", optional = true }
bevy_retrograde_physics = { version = "0.2", path = "crates/bevy_retrograde_physics", optional = true }
ron = "0.7.1"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.3"
image = "0.23.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"

[profile.dev]
opt-level = 2
debug = 0

# Add some examples explicitly so we can say they requires the extra `ldtk`
# or `epaint` features.
[[example]]
name = "ldtk_map"
path = "examples/ldtk_map.rs"
required-features = ["ldtk"]

[[example]]
name = "physics_map"
path = "examples/physics_map.rs"
required-features = ["ldtk"]
