[package]
name = "bevy_retro_audio"
version = "0.0.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A Bevy plugin for playing sounds."
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro_audio"
readme = "README.md"
keywords = ["gamedev", "audio", "bevy"]
categories = [
    "games",
    "game-development",
    "multimedia::audio"
]

[features]
default = [
    "flac",
    "ogg",
    "wav"
]
# Note: MP3 is not supported on web yet: https://github.com/germangb/minimp3-rs/issues/7#issue-398930679
mp3 = ["kira/mp3"]
flac = ["kira/flac"]
ogg = ["kira/ogg"]
wav = ["kira/wav"]

[dependencies]
bevy = { version = "0.5", default-features = false }
anyhow = "1.0.37"
thiserror = "1.0.23"
kira = { git = "https://github.com/tesselode/kira", branch = "main", default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }
