[package]
name = "bevy_retro_ldtk"
version = "0.0.1"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A Bevy Retro plugin for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro_ldtk"
readme = "README.md"
keywords = ["gamedev", "map-editor", "tile", "bevy-retro", "2D", "bevy"]
categories = [
    "games",
    "game-development",
    "parser-implementations"
]

[features]
default = []

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_retro_core = { path = "../bevy_retro_core" }
ldtk = { version = "0.4", features = ["ldtk-v0-9-3"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
thiserror = "1.0.23"
