[package]
name = "bevy_retro_ldtk"
version = "0.1.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../README.md"
description = "A Bevy Retro plugin for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro_ldtk"
keywords = ["bevy", "gamedev", "2D", "bevy_retro", "pixel-perfect", "map-editor"]
categories = [
    "game-development",
    "parser-implementations"
]

[features]
default = []

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_retro_core = { version = "0.1", path = "../bevy_retro_core" }
ldtk = { version = "0.4", features = ["ldtk-v0-9-3"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
thiserror = "1.0.23"
