[package]
name = "bevy_retro_macros"
version = "0.1.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../README.md"
description = "Utility macros used in Bevy Retro"
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro_macros"
keywords = ["bevy_retro"]
categories = ["development-tools"]

[dependencies]
