[package]
name = "bevy_retro_text"
version = "0.1.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../README.md"
description = "Bevy Retro's text rendering implementation"
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro_text"
keywords = ["bevy", "gamedev", "2D", "bevy_retro", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_retro_core = { version = "0.1", path = "../bevy_retro_core" }
bevy_retro_macros = { version = "0.1", path = "../bevy_retro_macros" }
peg = "0.7.0"
unicode-linebreak = "0.1.1"

thiserror = "1.0.24"
anyhow = "1.0.40"
