[package]
name = "bevy_retro_ui"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5", features = ["bevy_winit"], default-features = false }
bevy_retro_core = { path = "../bevy_retro_core" }
bevy_retro_text = { path = "../bevy_retro_text" }
bevy_retro_macros = { path = "../bevy_retro_macros" }

raui = { git = "https://github.com/katharostech/raui", rev = "9e88dbb6fb7c20b8aebf0659a4282c0393c4b799", features = ["material", "tesselate"] } 
