[package]
name = "bevy_retro_ui"
version = "0.1.0"
authors = ["Katharos Technology LLC"]
edition = "2018"

license-file = "../LICENSE.md"
readme = "../README.md"
description = "Pixel-Perfect, 2D Renderer and plugin set for Bevy that Seamlessly Targets Desktop and Web"
repository = "https://github.com/katharostech/bevy_retro"
documentation = "https://docs.rs/bevy_retro"
keywords = ["bevy", "gamedev", "2D", "bevy_retro", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
bevy = { version = "0.5", features = ["bevy_winit"], default-features = false }
bevy_retro_core = { version = "0.1", path = "../bevy_retro_core" }
bevy_retro_text = { version = "0.1", path = "../bevy_retro_text" }
bevy_retro_macros = { version = "0.1", path = "../bevy_retro_macros" }

raui = { version = "0.37.1", features = ["material", "tesselate"] } 
