[package]
name = "bevy_retrograde_audio"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "A simple Bevy plugin for playing sounds"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_audio"
keywords = ["bevy", "2D", "bevy_retrograde", "pixel-perfect", "audio"]
categories = [
    "game-development",
    "multimedia::audio"
]

[features]
default = [
    "flac",
    "ogg",
    "wav"
]
# Note: MP3 is not supported on web yet: https://github.com/germangb/minimp3-rs/issues/7#issue-398930679
mp3 = ["kira/mp3"]
flac = ["kira/flac"]
ogg = ["kira/ogg"]
wav = ["kira/wav"]

[dependencies]
bevy = { git = "https://github.com/katharostech/bevy", branch = "bevy_retrograde_0.3", default-features = false }
anyhow = "1.0.37"
thiserror = "1.0.23"
kira = { version = "0.5.2", default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }
