[package]
name = "bevy_retrograde_core"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "The core components and renderer of Bevy Retrograde"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_core"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[features]
default = [
    "jpeg",
    "png",
]
gif = ["image/gif"]
jpeg = ["image/jpeg"]
png = ["image/png"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
bmp = ["image/bmp"]

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "x11"] }
bevy_retrograde_macros = { version = "0.2", path = "../bevy_retrograde_macros" }
luminance = { version = "0.43.2", features = ["derive"] }
luminance-glow = "0.1.0"
winit = { version = "0.24", features = ["web-sys"] }
image = { version = "0.23.14", default-features = false }
thiserror = "1.0.24"
anyhow = "1.0.38"
petgraph = "0.5.1"
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
parking_lot = { version = "0.11.1" }
tracing = "0.1.25"
euclid = "0.22.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
dashmap = "4.0.2"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
luminance-surfman = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console"] }
wasm-bindgen = { version = "0.2" }

[build-dependencies]
cfg_aliases = "0.1.1"
