[package]
name = "bevy_retrograde_epaint"
version = "0.1.0"
authors = ["Katharos Technology LLC"]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Epaint integration for rendering in Bevy Retrograde"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
bevy = { version = "0.5", features = ["bevy_winit"], default-features = false }
bevy_retrograde_core = { version = "0.1", path = "../bevy_retrograde_core" }
bevy_retrograde_macros = { version = "0.1", path = "../bevy_retrograde_macros" }
epaint = "0.13.0"
