[package]
name = "bevy_retrograde_ldtk"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "A Bevy Retrograde plugin for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_ldtk"
keywords = ["bevy", "2D", "bevy_retrograde", "pixel-perfect", "map-editor"]
categories = [
    "game-development",
    "parser-implementations"
]

[features]
default = []

[dependencies]
bevy = "0.5"
bevy_retrograde_core = { version = "0.2", path = "../bevy_retrograde_core" }
ldtk = { version = "0.4", features = ["ldtk-v0-9-3"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
thiserror = "1.0.23"
