[package]
name = "bevy_retrograde_macros"
version = "0.1.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../README.md"
description = "Utility macros used in Bevy Retro"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_macros"
keywords = ["bevy_retrograde"]
categories = ["development-tools"]

[dependencies]
