[package]
name = "bevy_retrograde_physics"
version = "0.2.1"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Physics utilities for Bevy Retrograde"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_physics"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[features]
default = []
# Debug rendering does not work yet
# debug = ["raqote"]

[dependencies]
bevy = { git = "https://github.com/katharostech/bevy", branch = "bevy_retrograde_0.3", default-features = false }
heron = { git = "https://github.com/katharostech/heron", branch = "bevy-0.6", features = ["2d"], default-features = false }
density-mesh-core = "1.5.0"
density-mesh-image = "1.5.0"
image = "0.23.14"
# raqote = { version = "0.8.0", optional = true }