[package]
name = "bevy_retrograde_text"
version = "0.2.0"
authors = ["Katharos Technology LLC."]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Bevy Retrograde's text rendering implementation"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_text"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
bevy = { git = "https://github.com/katharostech/bevy", branch = "bevy_retrograde_0.3", default-features = false }
bevy_retrograde_macros = { version = "0.2", path = "../bevy_retrograde_macros" }
peg = "0.7.0"
unicode-linebreak = "0.1.1"
image = "0.23.0"

thiserror = "1.0.24"
anyhow = "1.0.40"
