[package]
name = "bevy_retrograde_ui"
version = "0.2.0"
authors = ["Katharos Technology LLC"]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Pixel-Perfect, 2D Renderer and plugin set for Bevy that Seamlessly Targets Desktop and Web"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
# bevy = "0.5"
# bevy_retrograde_core = { version = "0.2", path = "../bevy_retrograde_core" }
# bevy_retrograde_text = { version = "0.2", path = "../bevy_retrograde_text" }
# bevy_retrograde_macros = { version = "0.2", path = "../bevy_retrograde_macros" }

# raui = { version = "0.37.1", features = ["material", "tesselate"] } 
