[package]
name = "bevy_retrograde_ui"
version = "0.3.0"
authors = ["Katharos Technology LLC"]
edition = "2018"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Pixel-Perfect, 2D Renderer and plugin set for Bevy that Seamlessly Targets Desktop and Web"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_egui = "0.14.0"
egui_extras = "0.18.0"
peg = "0.8.0"
thiserror = "1.0.31"
anyhow = "1.0"
image = "0.23.0"
unicode-linebreak = "0.1.2"
rectangle-pack = "0.4.2"
